On-the-Fly .NET Compiler Project Changelog:

2.0.2 (-)
[-] No more ParameterContainer as proxy class for storing and accessing named properties

2.0.1 (2008.12.24)
[+] Public preview release as open source project

1.0.1 (2007.06.03)
[+] Version 1.0 released as core module of the CHLOE project in ICIE